--- a/index.html
+++ b/index.html
@@ -1,48 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Pelacak Lokasi ke Google Sheets</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pelacak Lokasi</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 50px; }
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f0f0f0;
+    }
+    h1 {
+      color: #333;
+    }
+    #location {
+      font-size: 1.2em;
+      margin-top: 20px;
+    }
+    #status {
+      color: green;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
-  <h2>Silakan izinkan akses lokasi</h2>
-  <p id="status">Mendeteksi lokasi...</p>
+  <h1>📍 Pelacak Lokasi</h1>
+  <p id="location">Mengambil lokasi Anda...</p>
+  <p id="status"></p>
 
   <script>
-    const sheetUrl = "https://script.google.com/macros/s/AKfycbyUtwIDxI-8gP6y_EMZENbj5EXnJtmaoe9po3hhje8LSsSRb-47SDkh0cxHkKXqifjz/exec";
+    const locationEl = document.getElementById('location');
+    const statusEl = document.getElementById('status');
 
-    function kirimData(lat, lon) {
-      fetch(sheetUrl, {
-        method: 'POST',
-        body: JSON.stringify({latitude: lat, longitude: lon}),
-        headers: {
-          "Content-Type": "application/json"
-        }
+    // Ganti URL ini dengan URL Web App dari Google Apps Script kamu
+    const scriptURL = "https://script.google.com/macros/s/AKfycbyUtwIDxI-8gP6y_EMZENbj5EXnJtmaoe9po3hhje8LSsSRb-47SDkh0cxHkKXqifjz/exec";
+
+    function sendToSheet(lat, lon) {
+      fetch(scriptURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+        body: `latitude=${lat}&longitude=${lon}&timestamp=${new Date().toISOString()}`
       })
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("status").innerText = "Lokasi berhasil dikirim ke Google Sheets.";
+      .then(response => {
+        statusEl.textContent = "✅ Lokasi berhasil dikirim ke Google Sheets.";
       })
-      .catch(err => {
-        document.getElementById("status").innerText = "Gagal mengirim lokasi: " + err;
+      .catch(error => {
+        statusEl.textContent = "❌ Gagal mengirim ke Google Sheets.";
+        console.error("Error:", error);
       });
     }
 
+    function success(position) {
+      const lat = position.coords.latitude;
+      const lon = position.coords.longitude;
+      locationEl.innerHTML = `Latitude: <b>${lat}</b><br>Longitude: <b>${lon}</b>`;
+      sendToSheet(lat, lon);
+    }
+
+    function error(err) {
+      locationEl.textContent = `Gagal mengambil lokasi: ${err.message}`;
+    }
+
     if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(function(position) {
-        const lat = position.coords.latitude;
-        const lon = position.coords.longitude;
-        document.getElementById("status").innerText =
-          `Latitude: ${lat}, Longitude: ${lon}\nMengirim data...`;
-        kirimData(lat, lon);
-      }, function(error) {
-        document.getElementById("status").innerText =
-          "Gagal mengambil lokasi: " + error.message;
-      });
+      navigator.geolocation.getCurrentPosition(success, error);
     } else {
-      document.getElementById("status").innerText = "Geolocation tidak didukung browser.";
+      locationEl.textContent = "Geolocation tidak didukung oleh browser Anda.";
     }
   </script>
 </body>
