--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   <script>
     // 🔁 Ganti dengan konfigurasi Firebase milik kamu
     const firebaseConfig = {
-      apiKey: "API_KEY_KAMU",
-      authDomain: "PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://PROJECT_ID.firebaseio.com",
-      projectId: "PROJECT_ID",
-      storageBucket: "PROJECT_ID.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
-    };
+  apiKey: "AIzaSyAnI3-EDQr7OK8fHaeSSzAtLk9iR5sgbac",
+  authDomain: "lokasiapi-2f434.firebaseapp.com",
+  projectId: "lokasiapi-2f434",
+  storageBucket: "lokasiapi-2f434.firebasestorage.app",
+  messagingSenderId: "875812427660",
+  appId: "1:875812427660:web:5c4ce962244c47e18128a9"
+};
 
     // Inisialisasi Firebase
     firebase.initializeApp(firebaseConfig);
