--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
   }
   function sendLocation(lat, lon) {
   const now = new Date().toISOString();
-    const browserInfo = navigator.userAgent;
+    const browserInfo = detectBrowser();
   db.ref("lokasi").push({
     latitude: lat,
     longitude: lon,
