--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
   <section id="featured-products" class="product-store">
     <div class="container-md">
       <div class="display-header d-flex align-items-center justify-content-between">
-        <h2 class="section-title text-uppercase">Featured Products</h2>
+        <h2 class="section-title text-uppercase">Produk Yang Dijual</h2>
         
       </div>
       <div class="product-content padding-small">
