--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>WATCH - Product Landing Page</title>
+        <title>UbayShoping</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Product Landing Page" name="keywords">
         <meta content="Product Landing Page" name="description">
@@ -33,10 +33,10 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="#header">Home</a></li>
-                        <li><a href="#feature">Features</a></li>
+                   <!--     <li><a href="#feature">Features</a></li>
                         <li><a href="#process">How Works</a></li>
                         <li><a href="#products">Products</a></li>
-                        <li><a href="#testimonials">Reviews</a></li>
+                        <li><a href="#testimonials">Reviews</a></li>-->
                         <li><a href="#faqs">FAQs</a></li>
                     </ul>
                 </nav>
@@ -56,9 +56,9 @@
         <div id="products">
             <div class="container">
                 <div class="section-header">
-                    <h2>Get Your Products</h2>
+                    <h2>Produk Tersedia</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra at massa sit amet ultricies
+                        Anda Bisa Memilih Produk Yang Anda Inginkan
                     </p>
                 </div>
                 <div class="row align-items-center">
