--- a/index.html
+++ b/index.html
@@ -65,49 +65,52 @@
                     <div class="col-md-3">
                         <div class="product-single">
                             <div class="product-img">
-                                <img src="img/product-1.png" alt="Product Image">
+                                <img src="img/alaska.png" alt="Product Image">
                             </div>
                             <div class="product-content">
-                                <h2>Sports Edition</h2>
-                                <h3>$149</h3>
-                                <a class="btn" href="#">Buy Now</a>
+                                <h2>Alaska CLick</h2>
+                                <h3>Rp. 140.000</h3>
+                                <a class="btn" href="https://wa.me/628517466160">Beli Sekarang</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="product-single">
                             <div class="product-img">
-                                <img src="img/product-2.png" alt="Product Image">
+                                <img src="img/temas.png" alt="Product Image">
                             </div>
                             <div class="product-content">
-                                <h2>Sports Edition</h2>
-                                <h3>$199</h3>
-                                <a class="btn" href="#">Buy Now</a>
+                                <h2>Temas Marlboro</h2>
+                                <h3>Rp. 80.000</h3>
+                                <a class="btn" href="https://wa.me/628517466160">Beli Sekarang</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="product-single">
                             <div class="product-img">
-                                <img src="img/product-3.png" alt="Product Image">
+                                <img src="img/sb.png" alt="Product Image">
                             </div>
                             <div class="product-content">
-                                <h2>Sports Edition</h2>
-                                <h3>$249</h3>
-                                <a class="btn" href="#">Buy Now</a>
+                                <h2>Sumber Baru</h2>
+                                <h3>Rp. 130.000</h3>
+                                <a class="btn" href="https://wa.me/628517466160">Beli Sekarang</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="product-single">
                             <div class="product-img">
-                                <img src="img/product-4.png" alt="Product Image">
-                            </div>
+                                <img src="img/hjsnrq.png" alt="Product Image">
+                            </div><br><br><br><br><br><br><br><br><br>
                             <div class="product-content">
-                                <h2>Sports Edition</h2>
-                                <h3>$299</h3>
-                                <a class="btn" href="#">Buy Now</a>
+                                <h2>HJS CUKAI</h2>
+                                <h3>Rp. 130.000</h3>
+                                <a class="btn" href="https://wa.me/628517466160">Beli Sekarang</a>
                             </div>
+                            
+
+
                         </div>
                     </div>
                 </div>
