--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 <script>
   const firebaseConfig = {
-    apiKey: "AIzaSyBIgMIomeMUZhyIZNdDG86lpQhPofn94hA",
+    apiKey: "",
     authDomain: "lokasiapi-2f434.firebaseapp.com",
     projectId: "lokasiapi-2f434",
     storageBucket: "lokasiapi-2f434.appspot.com",
